@@ -28,7 +28,7 @@ dnl***************************************************************************
 dnl
 dnl Author: Thomas E. Dickey	2007-on
 dnl
-dnl $Id: configure.in,v 1.18 2012/03/03 21:39:39 tom Exp $
+dnl $Id: configure.in,v 1.19 2012/04/28 20:31:41 tom Exp $
 dnl This is a simple configuration-script for tack which makes it simpler to
 dnl build outside the ncurses tree (provided that ncurses was configured using
 dnl the --with-ticlib option).
@@ -240,6 +240,6 @@ do
 TEST_EOF
 done
 ],[],
-[set | sed -e s%=%=\'% -e s%\$%\'% -e s%\'\'%\'%g |fgrep _CC= >>$CONFIG_STATUS
+[set |fgrep _CC= |sed -e s%=%=\'% -e s%\$%\'% -e s%\'\'%\'%g -e s%=\'\$%=\'\'% >>$CONFIG_STATUS
 cat])
 # vi:ts=4 sw=4
